CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
CMAKE_POLICY(SET CMP0074 NEW)
PROJECT(hootest)

SET(HOO_TEST_HEADERS TestUnit.hh TestResult.hh)
SET(HOO_TEST_SOURCES TestUnit.cpp TestResult.cpp)

ADD_LIBRARY(hootest STATIC ${HOO_TEST_HEADERS} ${HOO_TEST_SOURCES})
TARGET_INCLUDE_DIRECTORIES(hootest PRIVATE ${CMAKE_SOURCE_DIR})