CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
CMAKE_POLICY(SET CMP0074 NEW)
PROJECT(hootest)

SET(HOO_TEST_HEADERS
    ${CMAKE_SOURCE_DIR}/hoo/test/TestUnit.hh 
    ${CMAKE_SOURCE_DIR}/hoo/test/TestResult.hh)
SET(HOO_TEST_SOURCES 
    ${CMAKE_SOURCE_DIR}/hoo/test/TestUnit.cpp
    ${CMAKE_SOURCE_DIR}/hoo/test/TestResult.cpp)

ADD_LIBRARY(hootest STATIC 
    ${HOO_TEST_HEADERS} 
    ${HOO_TEST_SOURCES})
SET_TARGET_PROPERTIES(hootest
    PROPERTIES
    PUBLIC_HEADER "${HOO_TEST_HEADERS}")
TARGET_INCLUDE_DIRECTORIES(hootest PRIVATE ${CMAKE_SOURCE_DIR})